fixed the issue with star button on mobile

--- a/src/App.css
+++ b/src/App.css
@@ -5,10 +5,6 @@
   text-align: center
 }
 
-.task-label {
-  padding-left: 30px;
-}
-
 .task-form {
   max-width: 300px;
 }
